# google-scholar-rss-feed

./: Cargo.toml  README.md  gcc-linker-wrapper.bash  link-ape.bash  shell.nix  x86_64-unknown-linux-cosmo.json
.cargo/: config.toml
src/: main.rs
