[package]
name = "google-scholar-rss-feed"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", default-features = false, features = ["rt", "rt-multi-thread", "macros", "parking_lot"] }
parking_lot = { version = "0.12.3", default-features = false, features = ["send_guard"] }
hyper = { version = "1.6.0", default-features = false, features = ["server", "http1"] }
hyper-util = { version = "0.1.10", default-features = false, features = ["tokio", "server"] }
http-body-util = { version = "0.1.2", default-features = false }
google-scholar-query = { version = "0.1.4" }
rss = { version = "2.0.12", default-features = false, features = ["builders", "url"] }
lazy_static = { version = "1.5.0", default-features = false }
url = { version = "2.5.4", default-features = false }
